<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_gravity="center"
    android:layout_centerVertical="true"
    tools:context="agendaonline.agendaonlineapp.LoginActivity">
    <TextView android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/activity_login_app_name"
        android:layout_centerHorizontal="true"
        android:layout_margin="40dp"
        android:id="@+id/titulo"/>
    <EditText
        android:id="@+id/edittext_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/placeholder_login"
        android:layout_below="@id/titulo"
        android:layout_margin="5dp"
        android:inputType="text" />
    <EditText
        android:id="@+id/edittext_senha"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/placeholder_senha"
        android:layout_below="@id/edittext_login"
        android:layout_margin="5dp"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/button_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Entrar"
        android:layout_margin="40dp"
        android:background="#2B6C4B"
        android:textColor="#FFFFFF"
        android:layout_below="@id/edittext_senha"/>
</RelativeLayout>
