<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="agendaonline.agendaonlineapp.CadastroAlunoFragment">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="agendaonline.agendaonlineapp.CadastroAlunoFragment"
            android:scrollbars="vertical">
        <!-- Aluno-->
        <TextView
            style="@style/label_formulario"
            android:text="@string/label_nome_aluno" />

        <EditText
            android:id="@+id/edittext_nome_aluno"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />

        <TextView
            style="@style/label_formulario"
            android:text="@string/label_turma" />

            <EditText
                android:id="@+id/edittext_turma"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:enabled="false" />

            <TextView
                style="@style/label_formulario"
                android:text="@string/label_nome_professor" />

            <EditText
                android:id="@+id/edittext_nome_professor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:enabled="false" />

        <!-- Aluno-->

        </LinearLayout>
    </ScrollView>
</RelativeLayout>