<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="agendaonline.agendaonlineapp.InformacoesAdicionaisActivity">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="agendaonline.agendaonlineapp.InformacoesAdicionaisActivity"
            android:scrollbars="vertical">
            <!-- Aluno-->

            <TextView
                style="@style/label_formulario"
                android:text="@string/label_observacoes_aluno" />

            <EditText
                android:id="@+id/edittext_observacoes_aluno"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:gravity="top|left"
                android:lines="4"
                android:minLines="4"
                android:maxLines="4"
                android:scrollHorizontally="false"
                android:scrollbars="vertical"
                android:singleLine="false"/>

            <!-- Aluno-->
            <!-- Responsável-->
            <TextView
                style="@style/label_formulario"
                android:text="@string/label_nome_responsavel" />

            <EditText
                android:id="@+id/edittext_nome_responsavel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/label_formulario"
                android:text="@string/label_telefone_responsavel" />

            <EditText
                android:id="@+id/edittext_telefone_responsavel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

            <TextView
                style="@style/label_formulario"
                android:text="@string/label_contatos_emergenciais" />

            <EditText
                android:id="@+id/edittext_contatos_emergenciais"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:gravity="top|left"
                android:lines="4"
                android:minLines="4"
                android:maxLines="4"
                android:scrollHorizontally="false"
                android:scrollbars="vertical"
                android:singleLine="false"/>
            <!-- Responsável-->
        </LinearLayout>
    </ScrollView>
</RelativeLayout>